--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
 					<p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
 
-					<a href="#">Leia mais</a>
+					<a href="#" class="leia-mais">Leia mais</a>
 					<footer>Tags: <a href="#">design responsivo</a>, <a href="#">mobile</a>, <a href="#">css</a></footer>
 				</article>
 
@@ -29,7 +29,7 @@
 
 					<p>Tem se falado cada vez sobre acessibilidade na web. Há diversas técnicas e diretivas a serem seguidas, inclusive da própria W3C. Mas vale a pena investir nisso?</p>
 
-					<a href="#">Leia mais</a>
+					<a href="#"  class="leia-mais">Leia mais</a>
 					<footer>Tags: <a href="#">acessibilidade</a>, <a href="#">boas práticas</a></footer>
 				</article>
 
@@ -39,12 +39,12 @@
 
 					<p>JavaScript é uma linguagem essencial hoje em dia para criar páginas ricas, interativas e dinâmicas. Porém, há alguns cuidados que devem ser tomados ao colocarmos código JavaScript em nossas páginas.</p>
 
-					<a href="#">Leia mais</a>
+					<a href="#"  class="leia-mais">Leia mais</a>
 					<footer>Tags: <a href="#">javascript</a>, <a href="#">boas práticas</a></footer>
 				</article>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva">
+		<img src="img/eu.jpg" alt="Foto de João da Silva">
 		<aside>
 			<h1>João da Silva</h1>
 			<nav>
@@ -56,6 +56,23 @@
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
+			<ul class="icones-sociais">
+					<li>
+							<a class="github" href="https://github.com/joaodasilva">
+									github
+							</a>
+					</li>
+					<li>
+							<a class="twitter" href="https://twitter.com/joaodasilva">
+									twitter
+							</a>
+					</li>
+					<li>
+							<a class="linkedin" href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
+								 linkedin
+							</a>
+					</li>
+			</ul>
 		</aside>
 		<footer>
 			&copy; João da Silva 2014
