--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
 				</article>
 			</div>
 		</main>
-		<img src="img/eu.jpg" alt="Foto de João da Silva">
+		<img class="minha-foto" src="img/eu.jpg" alt="Foto de João da Silva">
 		<aside>
 			<h1>João da Silva</h1>
 			<nav>
@@ -74,7 +74,7 @@
 					</li>
 			</ul>
 		</aside>
-		<footer>
+		<footer class="rodape">
 			&copy; João da Silva 2014
 		</footer>
 	</body>
